# back-end

./: README.md  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt  tests.py
backend_main/: admin.py  models.py  serializers.py  urls.py  views.py
backend_main/migrations/: 0001_initial.py  0002_rename_items_item_rename_weapons_weapon.py  0003_map.py  0004_prompt.py  0005_player_inventory_player_left_hand_player_right_hand.py  0006_player_combat.py  0007_player_end_game.py
gamelogic/: backup_movement.py  move_player.py  tests.py  urls.py  views.py
stick_figure_adventures/: .env  asgi.py  sample.env  settings.py  urls.py  wsgi.py
